# ArmBionicsGUI_Ivan

./: CMakeLists.txt  definitions.h  emgwidget.cpp  emgwidget.h  emgwidget.ui  logger.h
Win32/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  build.ninja  cmake_install.cmake  definitions.h  emgwidget.cpp  emgwidget.h  emgwidget.h.autosave  emgwidget.ui  main.cpp  qtcsettings.cmake
Win32/.cmake/api/v1/reply/: cache-v2-20d6346429ca7cd8db71.json  cmakeFiles-v1-5ed5f413a3ad42170f8f.json  codemodel-v2-363c9f2eeba711aa4798.json  codemodel-v2-ba365b5a90d5952f6405.json  index-2024-08-13T12-02-33-0923.json  index-2024-08-19T07-33-28-0497.json  target-ArmBionicsGUIWin-Release-cb3b0b20a96fd17dfe8a.json  target-ArmBionicsGUIWin_autogen-Release-c86f3a90f266775190cf.json  target-qcustomplot-Release-bc1a7e73631b57f9c1ea.json
Win32/.cmake/api/v1/reply.prev/: cmakeFiles-v1-1f8255f02e084298cce3.json  codemodel-v2-ee4ada875e936e16d744.json  directory-.-Release-78fac2b0484fbf2aa3b3.json  index-2024-08-19T07-33-00-0440.json  target-ArmBionicsGUIWin-Release-121ad5667670b1e326e7.json  target-qcustomplot-Release-10d1140a79466e82eb08.json  target-qcustomplot_autogen-Release-2f7e59c1d03fae49e4ee.json
Win32/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Win32/.qtc_clangd/: compile_commands.json
Win32/.qtc_clangd/.cache/clangd/index/: config.h.62CDA82394205231.idx  definitions.h.77CCE5EF9A5EDBEB.idx  emgwidget.cpp.73423C71A1071DB2.idx  emgwidget.h.D40E56B9917088B4.idx  logger.h.340609D1AE121910.idx  main.cpp.06E23A6B9CC24379.idx  qaccessible.h.DA1F68E458282EEF.idx  qaction.h.9F29E751663E65BF.idx  qapplicationstatic.h.356EBEC6438EC7DA.idx  qcache.h.C6DE59D4E0AFAB94.idx  qcborstreamreader.h.F09860510BBFE79C.idx  qcontiguouscache.h.2687FC41346A2BAA.idx  qcoreapplication.h.143C24EB958DF44D.idx  qcoreevent.h.60445B935CE05C87.idx  qcustomplot.cpp.522662656B6DDCB6.idx  qcustomplot.h.67AE9B48C95E8245.idx  qdeadlinetimer.h.EA72477F4E2F5050.idx  qevent.h.12D93BF8515B58C6.idx  qflags.h.E29F73A1DCF0B585.idx  qfuture.h.EE5D64755E27DD2F.idx  qfuture_impl.h.C69133A8065BF9FE.idx  qfutureinterface.h.AC59CB9C9CDC00F3.idx  qgenericmatrix.h.DED01709ED966BAD.idx  qmap.h.081799A52818C14B.idx  qmutex.h.7F27FA476663D7C6.idx  qnativeinterface.h.2BFB57E669AE9BBC.idx  qobject.h.F1D2DD006C2BE20C.idx  (+21 more)
Win32/ArmBionicsGUIWin_autogen/: deps
Win32/ArmBionicsGUIWin_autogen/EWIEGA46WW/: moc_emgwidget.cpp  moc_emgwidget.cpp.d
Win32/ArmBionicsGUIWin_autogen/include/: ui_emgwidget.h
Win32/QCustomPlot-library/: cmake_install.cmake
Win32/QCustomPlot-library/lib/: cmake_install.cmake
Win32/QCustomPlot-library/lib/qcustomplot_autogen/: deps  moc_predefs.h
Win32/resources/: favicon.rc
(+6 files in other folders)
